--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 
 <body>
     <div id="center">
-        <label>Total Amount: </label>
-        <input type="text" id="total" placeholder="100" size="2" value="100">
+        <label>Total Amount of Questions: </label>
+        <input type="text" id="total" placeholder="100" size="2" autofocus>
         <br><br>
         <label>Current Question: </label>
-        <input type="text" id="question" placeholder="0" size="2" value="0" autofocus>
-        <br><br>
-        <label>Questions Remaining: </label>
-        <input type="text" id="remain" placeholder="100" size="2" value="100" readonly>
+        <input type="text" id="current" placeholder="0" size="2" value="0">
         <br><br>
         <label>Amount Correct: </label>
         <input type="text" id="correct" placeholder="0" size="2" value="0">
-        <br><br>        
+        <br><br>
+        <label>Questions Remaining: </label>
+        <input type="text" id="remain" placeholder="100" size="2" value="100" readonly>
+        <br><br>      
         <h3 id="c">0</h3>
         <h3>-----</h3>
         <h3 id="t">100</h3>
